[package]
name = "chip8"
version.workspace = true
edition.workspace = true

[dependencies]
chip8_core = {path = "core" }
iced = {version = "0.14", features = ["tokio", "image-without-codecs"]}
iced_aw = {version = "0.14", default-features = false, features = ["menu"]}
rfd = {version = "0.17", default-features = false, features = ["xdg-portal"]}
tokio = {version = "1", features = ["fs"]}


[workspace]
members = ["core"]

[workspace.package]
version = "0.1.0"
edition = "2024"
