[package]
name = "chip8-iced"
version = "0.1.0"
edition = "2024"

[dependencies]
chip8-core = {path = "../chip8-core"}
iced = {version = "0.13", features = ["tokio", "image-without-codecs"]}
iced_aw = {version = "0.12", default-features = false, features = ["menu"]}
rfd = {version = "0.15", default-features = false, features = ["xdg-portal", "tokio"]}
tokio = {version = "1", features = ["fs"]}
